<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/runtime_recovery_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="runtime_disable_all_hooks"
            app:summary="@string/runtime_disable_all_hooks_summary"
            app:title="@string/runtime_disable_all_hooks_title" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="runtime_safe_mode"
            app:summary="@string/runtime_safe_mode_summary"
            app:title="@string/runtime_safe_mode_title" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="runtime_disable_visual_modifications"
            app:summary="@string/runtime_disable_visual_summary"
            app:title="@string/runtime_disable_visual_title" />

        <Preference
            app:key="runtime_export_diagnostics"
            app:summary="@string/runtime_export_diagnostics_summary"
            app:title="@string/runtime_export_diagnostics_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/glass_development_title">

        <Preference
            app:key="runtime_glass_lab"
            app:summary="@string/runtime_glass_lab_summary"
            app:title="@string/runtime_glass_lab_title" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="runtime_enable_liquid_glass_prototype"
            app:summary="@string/runtime_glass_prototype_summary"
            app:title="@string/runtime_glass_prototype_title" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="runtime_enable_ios_home_redesign"
            app:summary="@string/runtime_ios_home_redesign_summary"
            app:title="@string/runtime_ios_home_redesign_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general">

        <ListPreference
            app:entries="@array/thememode_entries"
            app:entryValues="@array/thememode_values"
            app:key="thememode"
            app:summary="%s"
            app:title="@string/theme_mode" />

        <ListPreference
            app:defaultValue="preset"
            app:entries="@array/wae_color_mode_entries"
            app:entryValues="@array/wae_color_mode_values"
            app:key="wae_color_mode"
            app:summary="%s"
            app:title="@string/wae_color_mode" />

        <ListPreference
            app:defaultValue="green"
            app:entries="@array/wae_color_preset_entries"
            app:entryValues="@array/wae_color_preset_values"
            app:key="wae_color_preset"
            app:summary="%s"
            app:title="@string/wae_color_preset" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="update_check"
            app:defaultValue="true"
            app:summary="@string/update_check_sum"
            app:title="@string/update_check" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="disable_expiration"
            app:summary="@string/disable_whatsapp_expiration_sum"
            app:title="@string/disable_whatsapp_expiration" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="force_restore_backup_feature"
            app:summary="@string/force_restore_backup_summary"
            app:title="@string/force_restore_backup" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="disable_ads"
            app:summary="@string/disable_ads_sum"
            app:title="@string/disable_ads" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="force_english"
            app:title="@string/force_english" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="enablelogs"
            app:title="@string/verbose_logs" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="bypass_version_check"
            app:summary="@string/disable_version_check_sum"
            app:title="@string/disable_version_check" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="ampm"
            app:title="@string/ampm" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="segundos"
            app:summary="@string/segundosnahora_sum"
            app:title="@string/segundosnahora" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:defaultValue="[TIME]"
            app:key="text_in_hour"
            app:summary="@string/textonahora_sum"
            app:title="@string/textonahora" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="tasker"
            app:summary="@string/enable_tasker_automation_sum"
            app:title="@string/enable_tasker_automation" />

    </PreferenceCategory>

</PreferenceScreen>
